--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
+<body onhashchange="pageChange()">
+
+<!-----navigation----->
+<!-- <nav id="tabbar" class="tabbar hide">
+    <div id="menuToggle"></div> 
+</nav>-->
+
+<!-----home----->
+<section id="home" class="page"></section>
+
+<!-----cases----->
+<section id="cases" class="page"></section>
+
+<!-----member club----->
+<section id="memberclub" class="page"></section>
+
+<!-----profile----->
+<section id="profile" class="page"></section>
+</body>
 
 </html>
