--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body onhashchange="pageChange()">
 
 <!-----navigation----->
+<nav class="tabbar">
+    <a href="#home">Home</a>
+    <a href="#cases">Cases</a>
+    <a href="#memberclub">Member club</a>
+    <a href="#profile">Profile</a>
+</nav>
 <!-- <nav id="tabbar" class="tabbar hide">
     <div id="menuToggle"></div> 
 </nav>-->
@@ -28,6 +34,10 @@
 
 <!-----profile----->
 <section id="profile" class="page"></section>
+
+<!-----SPA----->
+<script src="spa.js"></script>
+
 </body>
 
 </html>
