--- a/index.html
+++ b/index.html
@@ -24,16 +24,24 @@
 </nav>-->
 
 <!-----home----->
-<section id="home" class="page"></section>
+<section id="home" class="page">
+    <p>home</p>
+</section>
 
 <!-----cases----->
-<section id="cases" class="page"></section>
+<section id="cases" class="page">
+    <p>cases</p>
+</section>
 
 <!-----member club----->
-<section id="memberclub" class="page"></section>
+<section id="memberclub" class="page">
+    <p>member club</p>
+</section>
 
 <!-----profile----->
-<section id="profile" class="page"></section>
+<section id="profile" class="page">
+    <p>profile</p>
+</section>
 
 <!-----SPA----->
 <script src="spa.js"></script>
