--- a/index.html
+++ b/index.html
@@ -19,13 +19,59 @@
     <a href="#memberclub">Member club</a>
     <a href="#profile">Profile</a>
 </nav>
+
+<div class="topnav">
+    <p>User name</p>
+    <p>icon</p>
+    <p>icon</p>
+    <p>icon</p>
+</div>
 <!-- <nav id="tabbar" class="tabbar hide">
     <div id="menuToggle"></div> 
 </nav>-->
 
 <!-----home----->
 <section id="home" class="page">
-    <p>home</p>
+
+    <div class="home-wrapper">
+
+    <div class="home-cases">
+    <h2>Cases</h2>
+    <div class="case-box">
+        <p>Service:<br>Service name</p>
+        <p>Company:<br>Company name</p>
+        <p>Advisor:<br>Advisor name</p>
+        <p>Status:<br>Status</p>
+    </div>
+    <div class="case-box">
+        <p>Service:<br>Service name</p>
+        <p>Company:<br>Company name</p>
+        <p>Advisor:<br>Advisor name</p>
+        <p>Status:<br>Status</p>
+    </div>
+    <div class="case-box">
+        <p>Service:<br>Service name</p>
+        <p>Company:<br>Company name</p>
+        <p>Advisor:<br>Advisor name</p>
+        <p>Status:<br>Status</p>
+    </div>
+    </div>
+
+    <div class="home-services">
+        <h2>Selected for you</h2>
+        <div class="service-box">
+            <img src="#">
+            <h3>Kick-off meeting</h3>
+            <p>We offer our members a free start-up meeting, where together with...</p>
+            <a href="#">Read more</a>
+        </div>
+        <div class="service-box"></div>
+        <div class="service-box"></div>
+    </div>
+
+    </div>
+
+    <!-- <div class="updates-box"></div> -->
 </section>
 
 <!-----cases----->
