--- a/index.html
+++ b/index.html
@@ -32,11 +32,23 @@
 
 <!-----home----->
 <section id="home" class="page">
+    
+    <div class="updates-box">
+        <h2>Updates</h2>
+        <div class="update">
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                In eget dolor consequat sagittis, orci, quam nulla.</p>
+        </div>
+        <div class="update"></div>
+        <div class="update"></div>
+    </div>
 
     <div class="home-wrapper">
 
     <div class="home-cases">
     <h2>Cases</h2>
+    <a href="#">See all cases</a>
     <div class="case-box">
         <p>Service:<br>Service name</p>
         <p>Company:<br>Company name</p>
@@ -59,19 +71,36 @@
 
     <div class="home-services">
         <h2>Selected for you</h2>
+        <a href="#">See all services</a>
+
+        <div>
+
         <div class="service-box">
             <img src="#">
             <h3>Kick-off meeting</h3>
             <p>We offer our members a free start-up meeting, where together with...</p>
             <a href="#">Read more</a>
         </div>
-        <div class="service-box"></div>
-        <div class="service-box"></div>
+
+        <div class="service-box" style="margin-left: 16px;">
+            <img src="#">
+            <h3>Kick-off meeting</h3>
+            <p>We offer our members a free start-up meeting, where together with...</p>
+            <a href="#">Read more</a>
+        </div>
+
+        <div class="service-box" style="margin-left: 16px;">
+            <img src="#">
+            <h3>Kick-off meeting</h3>
+            <p>We offer our members a free start-up meeting, where together with...</p>
+            <a href="#">Read more</a>
+        </div>
+
+        </div>
     </div>
 
     </div>
 
-    <!-- <div class="updates-box"></div> -->
 </section>
 
 <!-----cases----->
