--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 In eget dolor consequat sagittis, orci, quam nulla.</p>
         </div>
-        <div class="update"></div>
-        <div class="update"></div>
+        <div class="update">
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                In eget dolor consequat sagittis, orci, quam nulla.</p>
+        </div>
+        <div class="update">
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                In eget dolor consequat sagittis, orci, quam nulla.</p>
+        </div>
     </div>
 
     <div class="home-wrapper">
