--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 
 <!-----navigation----->
 <nav class="tabbar">
-    <a href="#home">Home</a>
-    <a href="#cases">Cases</a>
-    <a href="#memberclub">Member club</a>
-    <a href="#profile">Profile</a>
+    <a href="#home"><span class="iconify" data-inline="false" data-icon="carbon:home" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
+        margin-right: 16px;"></span>Home</a>
+    <a href="#cases"><span class="iconify" data-inline="false" data-icon="carbon:folder" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
+        margin-right: 16px;"></span>Cases</a>
+    <a href="#memberclub"><span class="iconify" data-inline="false" data-icon="carbon:star" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
+        margin-right: 16px;"></span>Member club</a>
+    <a href="#profile"><span class="iconify" data-inline="false" data-icon="carbon:user" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
+        margin-right: 16px;"></span>Profile</a>
 </nav>
 
 <div class="topnav">
@@ -128,6 +132,9 @@
 
 <!-----SPA----->
 <script src="spa.js"></script>
+
+<!-----icons----->
+<script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
 </body>
 
