changes in home - home almost ready!

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <!-----navigation----->
 <nav class="tabbar">
+    <img src="/img/huskobet-white.png" alt=" Huskobet white logo">
     <a href="#home"><span class="iconify" data-inline="false" data-icon="carbon:home" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
         margin-right: 16px;"></span>Home</a>
     <a href="#cases"><span class="iconify" data-inline="false" data-icon="carbon:folder" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
@@ -26,9 +27,9 @@
 
 <div class="topnav">
     <p>User name</p>
-    <p>icon</p>
-    <p>icon</p>
-    <p>icon</p>
+    <span class="iconify" data-inline="false" data-icon="carbon:event-schedule"></span>
+    <span class="iconify" data-inline="false" data-icon="carbon:help"></span>    
+    <span class="iconify" data-inline="false" data-icon="carbon:login"></span>
 </div>
 <!-- <nav id="tabbar" class="tabbar hide">
     <div id="menuToggle"></div> 
@@ -39,18 +40,24 @@
     
     <div class="updates-box">
         <h2>Updates</h2>
+
+        <p style="margin: 0;">00/00/00</p>
         <div class="update">
-            <img src="#">
+            <img src="/img/huskobet-blue.png" alt="Huskobet blue logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 In eget dolor consequat sagittis, orci, quam nulla.</p>
         </div>
+
+        <p style="margin: 0px;">00/00/00</p>
         <div class="update">
-            <img src="#">
+            <img src="/img/huskobet-blue.png" alt="Huskobet blue logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 In eget dolor consequat sagittis, orci, quam nulla.</p>
         </div>
+
+        <p style="margin: 0px;">00/00/00</p>
         <div class="update">
-            <img src="#">
+            <img src="/img/huskobet-blue.png" alt="Huskobet blue logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 In eget dolor consequat sagittis, orci, quam nulla.</p>
         </div>
@@ -62,47 +69,52 @@
     <h2>Cases</h2>
     <a href="#">See all cases</a>
     <div class="case-box">
-        <p>Service:<br>Service name</p>
-        <p>Company:<br>Company name</p>
-        <p>Advisor:<br>Advisor name</p>
-        <p>Status:<br>Status</p>
+        <p><span>Service:</span><br>Service name</p>
+        <p><span>Company:</span><br>Company name</p>
+        <p><span>Advisor:</span><br>Advisor name</p>
+        <p><span>Status:</span><br>Status</p>
+        <img src="/img/open-icon.svg" alt="Open icon svg">
     </div>
     <div class="case-box">
-        <p>Service:<br>Service name</p>
-        <p>Company:<br>Company name</p>
-        <p>Advisor:<br>Advisor name</p>
-        <p>Status:<br>Status</p>
+        <p><span>Service:</span><br>Service name</p>
+        <p><span>Company:</span><br>Company name</p>
+        <p><span>Advisor:</span><br>Advisor name</p>
+        <p><span>Status:</span><br>Status</p>
+        <img src="/img/open-icon.svg" alt="Open icon svg">
+
     </div>
     <div class="case-box">
-        <p>Service:<br>Service name</p>
-        <p>Company:<br>Company name</p>
-        <p>Advisor:<br>Advisor name</p>
-        <p>Status:<br>Status</p>
+        <p><span>Service:</span><br>Service name</p>
+        <p><span>Company:</span><br>Company name</p>
+        <p><span>Advisor:</span><br>Advisor name</p>
+        <p><span>Status:</span><br>Status</p>
+        <img src="/img/open-icon.svg" alt="Open icon svg">
+
     </div>
     </div>
 
     <div class="home-services">
         <h2>Selected for you</h2>
-        <a href="#">See all services</a>
+        <a href="#" style="float: right;">See all services</a>
 
         <div>
-
+        
         <div class="service-box">
-            <img src="#">
+            <img src="/img/kickoff-service.png">
             <h3>Kick-off meeting</h3>
             <p>We offer our members a free start-up meeting, where together with...</p>
             <a href="#">Read more</a>
         </div>
 
         <div class="service-box" style="margin-left: 16px;">
-            <img src="#">
+            <img src="/img/kickoff-service.png">
             <h3>Kick-off meeting</h3>
             <p>We offer our members a free start-up meeting, where together with...</p>
             <a href="#">Read more</a>
         </div>
 
         <div class="service-box" style="margin-left: 16px;">
-            <img src="#">
+            <img src="/img/kickoff-service.png">
             <h3>Kick-off meeting</h3>
             <p>We offer our members a free start-up meeting, where together with...</p>
             <a href="#">Read more</a>
