--- a/index.html
+++ b/index.html
@@ -203,7 +203,94 @@
 
 <!-----profile----->
 <section id="profile" class="page">
-    <p>profile</p>
+    <div class="profile-wrapper">
+
+        <div class="profile-box">
+            <h2>Profile</h2>
+                <div class="profile-nav">
+                    <div class="profile-element">
+                        <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:identification"></span>Personal data</h4>
+                        <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right"></span>
+                    </div>
+
+                    <div class="profile-element">
+                        <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:notification"></span>Notifications</h4>
+                        <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right"></span>
+                    </div>
+
+                    <div class="profile-element">
+                        <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:settings-adjust"></span>Preferences</h4>
+                        <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right"></span>
+                    </div>
+
+                    <div class="profile-element">
+                        <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:settings"></span>Settings</h4>
+                        <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right"></span>
+                    </div>
+                </div>
+        </div>
+
+        <div class="personal-data">
+            <form>
+                <span>
+                <label>Name</label><br>     <!-- for="name" -->
+                <input type="text" name="name" value="Name"><br>    <!-- id="fname" -->
+                </span>
+
+                <span style="margin-right: 0;">
+                <label>Surname</label><br>
+                <input type="text" name="surname" value="Surname"><br>
+                </span>
+
+                <span>
+                <label>Address</label><br>
+                <input type="text" name="address" value="Address"><br>
+                </span>
+                
+                <span>
+                <label>City</label><br>
+                <input type="text" name="city" value="City" style="width: 150px;"><br>
+                </span>
+
+                <span style="margin-right: 0;">
+                <label>Zip code</label><br>
+                <input type="text" name="zipcode" value="Zip code" style="width: 150px;"><br>
+                </span>
+
+                <span>
+                <label>Date of birth</label><br>
+                <input type="text" name="birthday" value="Date of birth" style="width: 150px;"><br>
+                </span>
+
+                <span>
+                <label>Gender</label><br>
+                <input type="text" name="gender" value="Gender" style="width: 150px;"><br>
+                </span>
+
+                <span style="display:table; clear:both;">
+                <label>Email address</label><br>
+                <input type="text" name="email" value="Email address"><br>
+                </span>
+
+                <span>
+                <label>Phone number</label><br>
+                <input type="number" name="phoneno" value="Phone number" style="width: 150px;"><br>
+                </span>
+
+                <span>
+                <label>Current password</label><br>
+                <input type="text" name="currentpassword" value="Current password"><br>
+                </span>
+
+                <span style="margin-right: 0;">
+                <label>New password</label><br>
+                <input type="text" name="newpassword" value="New password"><br>
+                </span>
+
+                <!-- <input type="submit" value="Submit"> -->
+              </form> 
+        </div>
+    </div>
 </section>
 
 <!-----SPA----->
