--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
     <div class="home-cases">
         <h2>Cases</h2>
-        <a href="#">See all cases</a>
-            <div class="case-box">
+        <a href="#cases" style="float: right;">See all cases</a>
+            <a href="#case-example"><div class="case-box">
                 <p><span>Service:</span><br>Service name</p>
                 <p><span>Company:</span><br>Company name</p>
                 <p><span>Advisor:</span><br>Advisor name</p>
                 <p><span>Status:</span><br>Status</p>
                 <img src="/img/open-icon.svg" alt="Open icon svg">
-            </div>
+            </div></a>
             <div class="case-box">
                 <p><span>Service:</span><br>Service name</p>
                 <p><span>Company:</span><br>Company name</p>
@@ -170,14 +170,14 @@
 
         <div class="home-cases">
             <h2>Cases</h2>
-            <a href="#">See all cases</a>
-                <div class="case-box">
+            <!-- <a href="#" style="float: right;">See all cases</a> -->
+                <a href="#case-example"><div class="case-box">
                     <p><span>Service:</span><br>Service name</p>
                     <p><span>Company:</span><br>Company name</p>
                     <p><span>Advisor:</span><br>Advisor name</p>
                     <p><span>Status:</span><br>Status</p>
                     <img src="/img/open-icon.svg" alt="Open icon svg">
-                </div>
+                </div></a>
                 <div class="case-box">
                     <p><span>Service:</span><br>Service name</p>
                     <p><span>Company:</span><br>Company name</p>
@@ -205,6 +205,11 @@
                 </div>
             </div>
         </div>
+</section>
+
+<!-----case example----->
+<section id="case-example" class="page">
+
 </section>
 
 <!-----member club----->
