case example + overall changes in layout

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
             </div>
     </div>
 
-    <div class="home-wrapper">
+    <div class="wrapper">
 
     <div class="home-cases">
         <h2>Cases</h2>
         <a href="#cases" style="float: right;">See all cases</a>
-            <a href="#case-example"><div class="case-box">
+            <a href="#case-example" style="text-decoration: none;"><div class="case-box">
                 <p><span>Service:</span><br>Service name</p>
                 <p><span>Company:</span><br>Company name</p>
                 <p><span>Advisor:</span><br>Advisor name</p>
@@ -166,12 +166,12 @@
         </div>
     </div>
 
-    <div class="home-wrapper">
+    <div class="wrapper">
 
         <div class="home-cases">
             <h2>Cases</h2>
             <!-- <a href="#" style="float: right;">See all cases</a> -->
-                <a href="#case-example"><div class="case-box">
+                <a href="#case-example" style="text-decoration: none;"><div class="case-box">
                     <p><span>Service:</span><br>Service name</p>
                     <p><span>Company:</span><br>Company name</p>
                     <p><span>Advisor:</span><br>Advisor name</p>
@@ -209,7 +209,76 @@
 
 <!-----case example----->
 <section id="case-example" class="page">
+    <div class="wrapper">
+        <h2>Case example</h2>
+        <a href="#cases" style="margin-bottom: 24px;"><span class="iconify" data-inline="false" data-icon="carbon:redo" data-flip="horizontal" style="font-size: 1.5em; color: #002173; vertical-align: bottom; margin-right: 8px;"></span>Go back to the cases</a>
 
+        <div class="advisor-info">
+            <p><span>Company:</span><br>Company name</p>
+            <p><span>Advisor:</span><br>Advisor name</p>
+            <p><span>Email:</span><br>Email</p>
+            <p><span>Phone number:</span><br>Phone number</p>
+            <p><span>Website:</span><br>Website</p>
+        </div>
+
+        <div class="case-content">
+
+            <div class="files-container">
+                <h3>Files</h3>
+                <div class="files-white-box">
+
+                    <div class="file-example">
+                        <div>
+                            <p>Doc type</p>
+                            <p>Doc name</p>
+                            <p>Doc name</p>
+                        </div>
+                        <div>
+                            <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                            <span class="iconify" data-inline="false" data-icon="carbon:download" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                        </div>
+                    </div>
+
+                    <div class="file-example">
+                        <div>
+                            <p>Doc type</p>
+                            <p>Doc name</p>
+                            <p>Doc name</p>
+                        </div>
+                        <div>
+                            <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                            <span class="iconify" data-inline="false" data-icon="carbon:download" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                        </div>
+                    </div>
+
+                    <div class="file-example">
+                        <div>
+                            <p>Doc type</p>
+                            <p>Doc name</p>
+                            <p>Doc name</p>
+                        </div>
+                        <div>
+                            <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                            <span class="iconify" data-inline="false" data-icon="carbon:download" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="calendar-container">
+                <h3>Calendar</h3>
+                    <div class="calendar-white-box"></div>
+
+            </div>
+
+            <div class="chat-container">
+                <h3>Chat</h3>
+                    <div class="chat-box"></div>
+            </div>
+
+        </div>
+    </div>
 </section>
 
 <!-----member club----->
@@ -219,7 +288,7 @@
 
 <!-----profile----->
 <section id="profile" class="page">
-    <div class="profile-wrapper">
+    <div class="wrapper">
 
         <div class="profile-box">
             <h2>Profile</h2>
