case example - chat

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
                   <div class="search-upload-btn"><span class="iconify" data-inline="false" data-icon="carbon:download" data-flip="horizontal" style="font-size: 1.25em; color: #002173; margin: 0 auto;"></span></div>
 
-                  <div class="search-upload-btn"><span class="iconify" data-inline="false" data-icon="carbon:search" data-flip="horizontal" style="font-size: 1.25em; color: #002173; margin: 0 auto;"></span></div>
+                  <div class="search-upload-btn"><span class="iconify" data-inline="false" data-icon="carbon:search" style="font-size: 1.25em; color: #002173; margin: 0 auto;"></span></div>
 
 
                 <div class="files-white-box">
@@ -295,7 +295,22 @@
 
             <div class="chat-container">
                 <h3>Chat</h3>
-                    <div class="chat-box"></div>
+                    <div class="chat-box">
+
+                        <!-- <p style="float: right;">00/00/00</p> -->
+                        <div class="message-box">
+                        <img src="/img/huskobet-blue.png">
+                        
+                            <div class="message-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                A, felis mattis quis massa at.</p>
+                            </div>
+                        </div>
+                        
+
+                        <!-- <span class="iconify" data-inline="false" data-icon="carbon:send" style="position: absolute;"></span> -->
+                        <input type="text" name="message" value="Write a message here" class="message-input">
+                    </div>
             </div>
 
         </div>
