mobile dashboard - nav

--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
 <!-----side desktop navigation----->
 <nav class="tabbar">
     <img src="/img/huskobet-white.png" alt=" Huskobet white logo">
-    <a href="#home"><span class="iconify" data-inline="false" data-icon="carbon:home" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
-        margin-right: 16px;"></span>Home</a>
-    <a href="#cases"><span class="iconify" data-inline="false" data-icon="carbon:folder" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
-        margin-right: 16px;"></span>Cases</a>
-    <a href="#memberclub"><span class="iconify" data-inline="false" data-icon="carbon:star" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
-        margin-right: 16px;"></span>Member club</a>
-    <a href="#profile"><span class="iconify" data-inline="false" data-icon="carbon:user" style="font-size: 1.5em; color: white; margin: 0; padding: 0; vertical-align: bottom;
-        margin-right: 16px;"></span>Profile</a>
+    <a href="#home"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:home"></span>Home</a>
+    <a href="#cases"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:folder"></span>Cases</a>
+    <a href="#memberclub"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:star"></span>Member club</a>
+    <a href="#profile"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:user"></span>Profile</a>
 </nav>
 
 <!-----top desktop navigation----->
