small changes in member club, mobile

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             <div class="articles-container">
                 <h3 style="display: inline-block;">Latest articles</h3>
                 <a href="#" style="float: right;">See all articles</a>
-                <div style="display: flex; justify-content: space-between;">
+                <div class="articles-flexbox">
                     <div class="article-example">
                         <img src="/img/article-img.png" alt="Article img">
                         <h4>Article's name</h4>
