--- a/index.html
+++ b/index.html
@@ -579,10 +579,17 @@
             <h2>Profile</h2>
                 <!-- Profile nav -->
                 <div class="profile-nav">
-                    <div class="profile-element" style="background: #002173;">
+                    <div class="profile-element reversed" style="background: #002173;">
                         <h4 style="color: white;"><span class="iconify headline-icon" data-inline="false" data-icon="carbon:identification" style="color: white;"></span>Personal data</h4>
                         <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right" style="color: white;"></span>
                     </div>
+
+                    <a href="#personal-data-mobile" style="text-decoration: none;">
+                        <div class="profile-element">
+                            <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:identification"></span>Personal data</h4>
+                            <span class="iconify arrow" data-inline="false" data-icon="carbon:chevron-right"></span>
+                        </div>
+                    </a>
 
                     <div class="profile-element profile-hover">
                         <h4><span class="iconify headline-icon" data-inline="false" data-icon="carbon:notification"></span>Notifications</h4>
@@ -661,6 +668,74 @@
               </form> 
             
           <button type="submit">Save the changes</button>
+
+        </div>
+    </div>
+</section>
+
+<!-- Personal data mobile -->
+<section id="personal-data-mobile" class="page">
+    <div class="wrapper-mobile">
+        <h3>Personal data</h3>
+        <a href="#cases" style="margin-bottom: 24px;"><span class="iconify" data-inline="false" data-icon="carbon:redo" data-flip="horizontal" style="font-size: 1.5em; color: #002173; vertical-align: bottom; margin-right: 8px;"></span>Go back to the profile</a>
+        <div class="personal-data">
+
+            <form>
+                <span>
+                <label>Name</label><br>     <!-- for="name" -->
+                <input type="text" onfocus="this.value=''" name="name" value="Name"><br>    <!-- id="fname" -->
+                </span>
+
+                <span>
+                <label>Surname</label><br>
+                <input type="text" onfocus="this.value=''" name="surname" value="Surname"><br>
+                </span>
+
+                <span>
+                <label>Address</label><br>
+                <input type="text" onfocus="this.value=''" name="address" value="Address"><br>
+                </span>
+                
+                <span>
+                <label>City</label><br>
+                <input type="text" onfocus="this.value=''" name="city" value="City"><br>
+                </span>
+
+                <span>
+                <label>Zip code</label><br>
+                <input type="text" onfocus="this.value=''" name="zipcode" value="Zip code"><br>
+                </span>
+
+                <span>
+                <label>Date of birth</label><br>
+                <input type="text" onfocus="this.value=''" name="birthday" value="Date of birth"><br>
+                </span>
+
+                <span>
+                <label>Gender</label><br>
+                <input type="text" name="gender" value="Gender"><br>
+                </span>
+
+                <span>
+                <label>Email address</label><br>
+                <input type="text" onfocus="this.value=''" name="email" value="Email address"><br>
+                </span>
+
+                <span>
+                <label>Phone number</label><br>
+                <input type="number" onfocus="this.value=''" name="phoneno" value="Phone number"><br>
+                </span>
+
+                <span>
+                <label>Current password</label><br>
+                <input type="text" onfocus="this.value=''" name="currentpassword" value="Current password"><br>
+                </span>
+
+                <span>
+                <label>New password</label><br>
+                <input type="text" onfocus="this.value=''" name="newpassword" value="New password"><br>
+                </span>
+            </form> 
 
         </div>
     </div>
