--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                 <a href="#" style="float: right;">See all articles</a>
                 <div class="articles-flexbox">
                     <div class="article-example">
-                        <img src="/img/article-img.png" alt="Article img">
+                        <img src="/img/article-img.jpg" alt="Article img">
                         <div>
                         <h4>Article's name</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
@@ -595,7 +595,7 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article-img.png" alt="Article img">
+                        <img src="/img/article2-img.jpg" alt="Article img">
                         <div>
                         <h4>Article's name</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
@@ -604,7 +604,7 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article-img.png" alt="Article img">
+                        <img src="/img/article-img.jpg" alt="Article img">
                         <div>
                         <h4>Article's name</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
@@ -613,7 +613,7 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article-img.png" alt="Article img">
+                        <img src="/img/article2-img.jpg" alt="Article img">
                         <div>
                         <h4>Article's name</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
